--- a/LittleInjector/MainWindow.xaml
+++ b/LittleInjector/MainWindow.xaml
@@ -5,40 +5,59 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Little Injector" Height="400" Width="500" WindowStartupLocation="CenterScreen" 
+        Title="Little Injector" Height="395.353" Width="651.115" WindowStartupLocation="CenterScreen" 
                       BorderThickness="0" ResizeMode="NoResize">
-    <Grid>
-        <Border CornerRadius="300">
+    <Grid Height="519" VerticalAlignment="Top" Margin="0,0,0,-148">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="60*"/>
+            <ColumnDefinition Width="274*"/>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="26*"/>
+            <ColumnDefinition Width="36*"/>
+            <ColumnDefinition Width="178*"/>
+        </Grid.ColumnDefinitions>
+        <Border CornerRadius="0" ClipToBounds="True" SnapsToDevicePixels="True" RenderTransformOrigin="0.513,0.505" Margin="0,0,0,146" Grid.ColumnSpan="6">
+            <Border.ContextMenu>
+                <ContextMenu AllowDrop="True"/>
+            </Border.ContextMenu>
+            <Border.Effect>
+                <DropShadowEffect/>
+            </Border.Effect>
             <Border.Background>
-                <ImageBrush ImageSource="background.jpg" Stretch="UniformToFill" />
+                <ImageBrush ImageSource="background.jpg">
+                    <ImageBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ImageBrush.RelativeTransform>
+                </ImageBrush>
             </Border.Background>
-            <StackPanel>
-                <Label Content="Little Injector" FontSize="50" HorizontalAlignment="Left" FontFamily="Scriptina Pro" Margin="1,30,0,0" >
-                    <Label.Foreground>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="Black" Offset="0.36"/>
-                            <GradientStop Color="White" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Label.Foreground>
-                </Label>
+            <StackPanel Margin="0,-27,0,0">
                 <Controls:FlipView x:Name="FlipViewTest"
-                    MouseOverGlowEnabled="False"              
-                    Height="270"
-                    Margin="0,-30,0,0"
-                    SelectionChanged="FlipViewTest_SelectionChanged" MouseDown="FlipViewTest_MouseDown">
-                    <Controls:FlipView.Items>
-                        <Grid>
-                            <Button x:Name="InjectButton" Content="INJECT" VerticalAlignment="Bottom" Height="50" Margin="0,0,0,35" Width="350" Foreground="White" Background="Transparent" FontFamily="Counter-Strike" FontSize="28" Click="InjectButton_Click" />
-                        </Grid>
-                        <Grid>
-                            <StackPanel HorizontalAlignment="Center" Margin="0,30,220,0">
-                                <TextBlock Text="Developer" FontFamily="Counter-Strike" FontSize="18" />
-                                <TextBlock Text="SirMestre" />
-                                <TextBlock Text="Special Thanks" FontFamily="Counter-Strike" FontSize="18" />
-                                <TextBlock Text="- device9999" />
-                            </StackPanel>
-                        </Grid>
-                    </Controls:FlipView.Items>
+                    MouseOverGlowEnabled="False"
+                    SelectionChanged="FlipViewTest_SelectionChanged" MouseDown="FlipViewTest_MouseDown" Controls:ScrollViewerHelper.IsHorizontalScrollWheelEnabled="True" Foreground="#FFB89536" RenderTransformOrigin="0.503,0.51" Height="398">
+                    <Controls:FlipView.Background>
+                        <ImageBrush/>
+                    </Controls:FlipView.Background>
+                    <Grid>
+                        <Button x:Name="InjectButton" Content="INJECT" Height="69.881" Margin="0,282.813,35.946,-352.694" Foreground="White" FontFamily="Chinese Rocks" FontSize="48" Click="InjectButton_Click" FontWeight="Bold" ScrollViewer.HorizontalScrollBarVisibility="Visible" HorizontalAlignment="Right" VerticalAlignment="Top" UseLayoutRounding="False" Background="#FFF50D0D" BorderBrush="#FF5D0A0A" Width="250.145" RenderTransformOrigin="0.102,0.469" />
+                    </Grid>
+                    <Grid Height="380">
+                        <StackPanel HorizontalAlignment="Center" Margin="48,41,41,0" Width="556" Height="329" VerticalAlignment="Top" Background="Black">
+                            <TextBlock Text="reskinned by" FontFamily="Chinese Rocks" FontSize="28" Foreground="#FFFF5506" VerticalAlignment="Bottom" Height="29" RenderTransformOrigin="0.486,2.374" Margin="0,0,163,0" HorizontalAlignment="Right" Width="209" />
+                            <TextBlock FontFamily="Chinese Rocks" FontSize="28" Foreground="#FFFF00B9" ><Run Text="Plumbwicked   on   03/15/2020"/><LineBreak/><Run/></TextBlock>
+                            <TextBlock Text="Developed and created by:" FontFamily="Chinese Rocks" FontSize="20" Foreground="#FF3CFF03" Height="22" />
+                            <TextBlock Foreground="#FF1C9C00" FontFamily="Chinese Rocks" FontWeight="Bold" FontSize="72" Height="77" ><Run Foreground="#FF2EFF00" Text="SirMestre"/></TextBlock>
+                            <TextBlock Text="Special Thanks to :" FontFamily="Chinese Rocks" FontSize="18" Foreground="#FF0080FF" />
+                            <TextBlock Text="SirMestre for all his contributions," Foreground="#FF7A0095" Height="23" Margin="0,0,-23,0" FontFamily="Chinese Rocks" FontSize="20" />
+                            <TextBlock Text="Thanks to coronaVirus and toilet paper" Foreground="#FFB9FF00" FontFamily="Chinese Rocks" />
+                            <TextBlock Text="Thanks to Everyone @ Unknowncheats.me for putting up with my shit" Foreground="Red" Height="48" RenderTransformOrigin="0.494,1.168" FontFamily="Chinese Rocks" />
+
+                        </StackPanel>
+                    </Grid>
                 </Controls:FlipView>
             </StackPanel>
         </Border>
